# mash

./: mash.cabal  stack.yaml
app/: Main.hs
src/: Mash.hs
src/Mash/: Command.hs  Core.hs  Main.hs  Parse.hs  Prompt.hs
